# snake-ai

./: .gitignore  README.md  pyproject.toml
src/: snake.py
tests/: test_snake.py
