[tool.poetry]
name = "snake-ai"
version = "0.1.0"
description = "A take on the classic Snake game, designed and implemented to work with neural networks."
authors = ["Richard Paredes <richard.o.paredes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
